<resources>
    <string name="app_name">Drled</string>
    <string name="bem_vindo_login">Bem-vindo, Faça seu login</string>
    <string name="mensagem_login">Faça seu Login</string>
    <string name="login">Login</string>
    <string name="configuracoes">Configurações</string>
    <string name="adicionar">Adicionar</string>
    <string name="atualizar">Atualizar</string>
    <string name="buscar">Buscar</string>
    <string name="sair">Sair</string>
    <string name="fornecedor">fornecedor</string>
    <string name="produto">produto</string>
    <string name="usuario">usuario</string>
    <string name="cadastrarUsuario">Cadastrar usuário</string>
    <string name="nome_usu_rio">Nome Usuário</string>
    <string name="nav_open">Abrir</string>
    <string name="nav_close">Fechar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="action_buscar">Buscar</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_adicionar">Adicionar</string>
    <string name="action_config">Configurações</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="empty_list">Você pode adicionar produtos clicando no botão \ "+ \"</string>
    <string name="photo">foto</string>
    <string name="product">produto</string>
    <string name="order">Order</string>
    <string name="delete">delela</string>
    <string name="price">Preço</string>
    <string name="quantity">Quantidade</string>
    <string name="name">Nome</string>
    <string name="add_photo">Add foto</string>
    <string name="photo_edit_symbol">editar simbolo</string>
    <string name="name_symbol">nome simbolo</string>
    <string name="quantity_symbol">quantidade simbolo</string>
    <string name="price_symbol">preço simbolo</string>
    <string name="details_title">Detalhes</string>
    <string name="products_catalog_title">Catalogos de produtos</string>
    <string name="edit_product_title">Editar produtos</string>
    <string name="dismiss">não</string>
    <string name="add">Add</string>
    <string name="save">salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="change_photo">Alterar foto</string>
    <string name="error_loading_product">Error ao carregar o produto</string>
    <string name="failed_getting_image">Falha a pegar imagem</string>
    <string name="failed_deleting_product">Falha ao deletar produto</string>
    <string name="failed_saving_product">Falha ao salvar produto</string>
    <string name="failed_adding_product">Falha ao adicionar novo produto</string>
    <string name="info_not_picked_image">Imagem não escolhida</string>
    <string name="info_deleted_product">Produto deletado</string>
    <string name="info_correct_name_enter">Digite o nome correto</string>
    <string name="info_saved_product">Produto salvo</string>
    <string name="info_added_product">Produto adicionado</string>
    <string name="email_order">Pedido -</string>
    <string name="email_dear">Meu caro amigo</string>
    <string name="email_would_like">Eu gostaria de pedir</string>
    <string name="email_number_of">Number of items:</string>
    <string name="email_yours">Com os melhores cumprimentos,</string>
    <string name="select_app_title">Selecione um aplicativo para enviar mensagem</string>
    <string name="order_dialog_title">Quantos você deseja encomendar?</string>
    <string name="order_dialog_cancel">Cancelar</string>
    <string name="order_dialog_make_order">Fazer pedido</string>
    <string name="dollar_symbol" translatable="false">R$</string>
    <string name="number_no_data">sem dados</string>
    <string name="sort_by_name_asc">Classificar por nome A-Z</string>
    <string name="sort_by_name_desc">Classificar por nome Z-A</string>
    <string name="sort_by_price_highest">Classificar por preço mais alto</string>
    <string name="sort_by_price_lowest">Classificar por preço mais baixo</string>
    <string name="sort_by_date_newest">Classificar por data mais recente</string>
    <string name="sort_by_date_oldest">Classificar por data mais antiga</string>
    <string name="sort_by_quantity_more">Classificar por quantidade maior</string>
    <string name="sort_by_quantity_less">Classificar por quantidade menor</string>
    <string name="statistics">Estatistica</string>
    <string name="about_the_app">Sobre o app</string>
    <string name="content_description_big_app_icon">Icone grande do App</string>
    <string name="created_by">Criado por:</string>
    <string name="mikolaj_ratajczyk" translatable="false">floatmind</string>
    <string name="mikolaj_ratajczyk_at_gmail" translatable="false">floatmindd@gmail.com</string>
    <string name="number_of_items">Numeros de itens</string>
    <string name="number_of_products">Numeros de produtos</string>
    <string name="maximum_price">Preço maximo</string>
    <string name="minimum_price">Preço minimo</string>
    <string name="statistics_title">Estatisticas</string>
    <string name="graphs_title">Graficos</string>
    <string name="about_title">Sobre</string>
    <string name="items_products_graph_title">Número de itens e produtos</string>
    <string name="max_min_price_graph_title">Preço máximo e mínimo</string>
    <string name="content_description_background_product_photo">foto do produto em segundo plano</string>
    <string name="list_no_product_available">Nenhum produto disponivel</string>
    <string name="settings_label">Configuração</string>
    <string name="preference_longer_easter_egg" translatable="false">preference_longer_easter_egg</string>
    <string name="multiply_values_by_ten">Multiply values by 10</string>
    <string name="longer_easter_egg">Longer easter egg</string>
    <string name="title_easter_egg" translatable="false">Easter egg</string>
    <string name="preference_category_easter_egg" translatable="false">preference_category_easter_egg</string>
    <string name="bottom_nav_title_catalog">Catalogo</string>
    <string name="bottom_nav_title_statistics">Estatisticas</string>
    <string name="bottom_nav_title_settings">Configurações</string>
    <string name="bottom_nav_title_about">Sobre</string>
    <string name="dialog_title_permission_denied">Permissão negada</string>
    <string name="dialog_description_app_will_not_work">O aplicativo não funcionará sem a permissão de armazenamento</string>
    <string name="exit">Sair</string>
    <string name="bottom_nav_title_export">Exportar</string>
    <string name="card_title_export_settings">Configurações de exportações</string>
    <string name="card_title_export_actions">Ações de exportações</string>
    <string name="save_to_pdf">Salvar para PDF</string>
    <string name="include_photos">Incluir fotos</string>
    <string name="include_zero_quantity_products">Incluir produtos com quantidade zero</string>
    <string name="snackbar_database_export_success">banco exportado com sucesso/</string>
    <string name="date_symbol">simbolo da data</string>
    <string name="date">Data</string>
    <string name="day_month_year_schema_hint">DD.MM.YYYY</string>
    <string name="time_schema_hint">HH:mm</string>
    <string name="title_activity_maps">Map</string>
</resources>
