<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_config"
        android:title="@string/configuracoes"
        ></item>
    <item
        android:id="@+id/action_buscar"
        android:title="@string/buscar"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        ></item>
    <item
        android:id="@+id/action_adicionar"
        android:title="@string/adicionar"
        ></item>
    <item
        android:id="@+id/action_atualizar"
        android:title="@string/atualizar"
        ></item>
    <item
        android:id="@+id/exit"
        android:title="@string/sair"
        ></item>
</menu>